--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,5 +36,46 @@ a{
     padding: 0px 80px;    
 }
 
+@media screen and (max-width:1536px){
+
+    .wrapper{
+        max-width: 1366px;
+    }
+}
+
+
+@media screen and (max-width:1280px) {
+
+    .wrapper{
+        max-width: 1024px;
+    }
+    
+}
+
+@media screen and (max-width:1024px) {
+
+    .wrapper{
+        max-width: 768px;
+        padding: 0px 40px;  
+    }
+    
+}
+
+
+@media screen and (max-width:768px) {
+
+    .wrapper{
+        max-width: 640px;
+    }
+    
+}
+
+@media screen and (max-width:640px) {
+
+    .wrapper{
+        max-width: 475px;
+    }
+    
+}
 
 
